@@ -270,6 +270,9 @@ web.jsp.async=true
 # One specific domain name can be supplied so that the header becomes: ALLOW-FROM http://foo.bar.com 
 web.security.iFrameAccess=SAMEORIGIN
 
+#Follow symbolic links when serving files from Jetty
+web.security.followSymlinks=true
+
 # Content Security Policy settings, please see https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP
 # The reasons for the default policy are outlined below
 # style-src 'unsafe-inline' - inline styles are used by AngularJS Material for the dynamic theming
